Update GitHub profile link in index.html
since original repo already credits the author

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							target="_blank" rel="noopener noreferrer">
 							<i class="fab fa-github me-2"></i>Original Site
 						</a>
-						<a href="https://github.com/NhanAZ" class="text-decoration-none text-muted" target="_blank"
+						<a href="https://github.com/imluckii" class="text-decoration-none text-muted" target="_blank"
 							rel="noopener noreferrer">
 							<i class="fas fa-user me-2"></i>GitHub Profile
 						</a>
